[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = "param_track"
dynamic = ["version"]
authors = [{name = "David DeBoer", email="david.r.deboer@gmail.com"}]
keywords = ["Parameters"]
license = "MIT"
readme = "README.md"

[tools.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "param_track.__version__"}
