[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = "param_track"
authors = [{name = "David DeBoer", email="david.r.deboer@gmail.com"}]
version = "1.0.0"
keywords = ["Parameters"]
license = "MIT"
readme = "README.md"

[tools.setuptools.packages.find]
where = ["."]
