[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "param_track"
authors = [{name = "David DeBoer", email="david.r.deboer@gmail.com"}]
version = "1.1.0"
keywords = ["Parameters"]
license = "MIT"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["param_track*"]
